# indexeddb-rs

./: Cargo.toml  README.md
indexeddb-test/: Cargo.toml  build.sh  index.js  indexeddb_test.js  indexeddb_test_bg.wasm  package-lock.json  webpack.config.js
indexeddb-test/src/: lib.rs
src/: db.rs  error.rs  index.rs  lib.rs  macros.rs  object_store.rs  request.rs  transaction.rs  utils.rs
tests/: web.rs
