[package]
name = "indexeddb"
version = "0.1.0"
authors = ["Richard Dodd <richard.o.dodd@gmail.com>"]
edition = "2018"
license = "Apache-2.0/MIT"
repository = "https://github.com/derekdreery/indexeddb-rs"
readme = "README.md"
description = "indexeddb callbacks to rust futures"

[dependencies]
wasm-bindgen = "0.2.29"
futures = "0.1.25"
js-sys = "0.3.6"
lazy_static = "1.2.0"
wasm-bindgen-futures = "0.3.6"

[dependencies.web-sys]
version = "0.3.6"
features = [
    "Window",
    "DomException",
    "IdbDatabase",
    "IdbFactory",
    "IdbOpenDbRequest",
    "IdbRequest",
    "IdbRequestReadyState",
]

[workspace]
members = [
    ".",
    "indexeddb-test",
]
