[package]
name = "indexeddb"
version = "0.2.0"
authors = ["Richard Dodd <richard.o.dodd@gmail.com>", "Andrew Beyer <beyer@1password.com>"]
edition = "2018"
license = "Apache-2.0/MIT"
repository = "https://github.com/derekdreery/indexeddb-rs"
readme = "README.md"
description = "indexeddb callbacks to rust futures"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
console-web = "0.1"
js-sys = "0.3"
lazy_static = "1.4"
serde = "1"
wasm-bindgen = {version = "0.2", features = ["serde-serialize"]}
wasm-bindgen-futures = "0.4"

[dependencies.web-sys]
version = "0.3"
features = [
    "DomException",
    "DomStringList",
    "IdbDatabase",
    "IdbFactory",
    "IdbIndex",
    "IdbIndexParameters",
    "IdbObjectStore",
    "IdbObjectStoreParameters",
    "IdbOpenDbRequest",
    "IdbRequest",
    "IdbRequestReadyState",
    "IdbTransaction",
    "IdbTransactionMode",
    "IdbVersionChangeEvent",
    "Window",
]

[workspace]
members = [
    ".",
    "indexeddb-test",
]

[dev-dependencies]
serde = {version = "1", features = ["derive"]}
wasm-bindgen-test = "0.3"
