[package]
name = "indexeddb-test"
version = "0.1.0"
authors = ["Richard Dodd <richard.o.dodd@gmail.com>"]
edition = "2018"

[lib]
crate-type = ["cdylib"]

[dependencies]
indexeddb = { path = ".." }
wasm-bindgen = "0.2.29"
console-web = "0.1.2"
futures = "0.1.25"
wasm-bindgen-futures = "0.3.6"
console_error_panic_hook = "0.1.5"
web-sys = "0.3.6"
js-sys = "0.3.6"
